--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.html",
   "author": "Fls",
   "license": "ISC",
+  "type": "module",
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
@@ -30,6 +31,7 @@
     "gulp-webpcss": "^1.1.1",
     "imagemin-webp": "^6.0.0",
     "sass": "^1.53.0",
-    "webp-converter": "^2.2.3"
+    "webp-converter": "^2.2.3",
+    "webpack-stream": "^7.0.0"
   }
 }
