--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "gulp-file-include": "^2.3.0",
     "gulp-fonter": "^0.3.0",
     "gulp-group-css-media-queries": "^1.2.2",
-    "gulp-imagemin": "^7.1.0",
+    "gulp-imagemin": "^8.0.0",
     "gulp-newer": "^1.4.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
@@ -30,7 +30,10 @@
     "gulp-webp-html": "^1.0.2",
     "gulp-webpcss": "^1.1.1",
     "imagemin-webp": "^6.0.0",
+    "mozjpeg": "^8.0.0",
     "sass": "^1.53.0",
+    "swiper": "^8.3.2",
+    "tippy.js": "^6.3.7",
     "webp-converter": "^2.2.3",
     "webpack-stream": "^7.0.0"
   }
