--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-node_modules
-zlatmaxGulp/
+package-lock.json
+flsStartTemplate/
+dist/
+node_modules/
+version.json
+.gitignore
+undefined
+Source/
